@@ -15,6 +15,12 @@ Version 0.7.3 UNRELEASED
 
   * Make boundaries of sessions in the log file more clear (Closes: #269275)
 
+- Internal changes:
+
+  * temp.cc: simplify code and messages and reduce the use of boost libs
+
+  * configure.ac: Remove checks for boost/scoped_array.hpp, not used anymore
+
 
 [2015-09-17]
 Version 0.7.2
